--- a/platziverse-db/package.json
+++ b/platziverse-db/package.json
@@ -21,7 +21,9 @@
     "standard": "^16.0.3"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "debug": "^4.3.1",
+    "inquirer": "^7.3.3",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
