--- a/platziverse-db/package.json
+++ b/platziverse-db/package.json
@@ -4,6 +4,7 @@
   "description": "A simple IoT platform - DB Module",
   "main": "index.js",
   "scripts": {
+    "test": "DEBUG=platziverse:* ava --verbose",
     "setup": "DEBUG=platziverse:* node setup.js",
     "lint": "standard"
   },
@@ -18,11 +19,14 @@
   },
   "homepage": "https://github.com/CAMIRO/platziverse#readme",
   "devDependencies": {
+    "ava": "^3.15.0",
+    "sqlite3": "^5.0.0",
     "standard": "^16.0.3"
   },
   "dependencies": {
     "chalk": "^4.1.0",
     "debug": "^4.3.1",
+    "defaults": "^1.0.3",
     "inquirer": "^7.3.3",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
