--- a/platziverse-db/package.json
+++ b/platziverse-db/package.json
@@ -4,7 +4,7 @@
   "description": "A simple IoT platform - DB Module",
   "main": "index.js",
   "scripts": {
-    "test": "DEBUG=platziverse:* ava --verbose",
+    "test": "DEBUG=platziverse:* nyc --reporter=lcov ava --verbose",
     "setup": "DEBUG=platziverse:* node setup.js",
     "lint": "standard"
   },
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/CAMIRO/platziverse#readme",
   "devDependencies": {
     "ava": "^3.15.0",
+    "nyc": "^15.1.0",
     "sqlite3": "^5.0.0",
     "standard": "^16.0.3"
   },
